# ark-algebra

./: Cargo.toml
curves/: Cargo.toml
curves/bls12_381/: Cargo.toml
curves/bn254/: Cargo.toml
curves/ed_on_bls12_381/: Cargo.toml
curves/ed_on_bn254/: Cargo.toml
curves/secp256k1/: Cargo.toml
curves/secq256k1/: Cargo.toml
ec/: Cargo.toml
ff/: Cargo.toml
ff-asm/: Cargo.toml
ff-macros/: Cargo.toml
poly/: Cargo.toml
serialize/: Cargo.toml
serialize-derive/: Cargo.toml
