[package]
name = "ark-bls12-381-zypher"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "The BLS12-381 pairing-friendly elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/zypher/ark-algebra"
documentation = "https://docs.rs/ark-bls12-381-zypher/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version= "0.4.0", default-features = false, package = "ark-ff-zypher"  }
ark-ec = { version= "0.4.0", package = "ark-ec-zypher"  }
ark-std = { version = "0.4.0", default-features = false, package = "ark-std-zypher"  }
ark-serialize = { version = "0.4.0", default-features = false, package = "ark-serialize-zypher"  }

[dev-dependencies]
ark-algebra-test-templates = { version = "0.4.0", default-features = false }
ark-algebra-bench-templates = { version = "0.4.0", default-features = false }
hex = "^0.4.0"

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field" ]
scalar_field = []

[[bench]]
name = "bls12_381"
path = "benches/bls12_381.rs"
harness = false
